--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API = 
-TG_API = 
+API = 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
+TG_API = 6118730988:AAEp68M6p-7_rKS31QHdYWrClBJ1wajius8
